--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "@babel/preset-react": "^7.18.6",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2"
-  }
+  },
+  "extends": [
+      "next"
+  ]
 }
